# spider

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  index.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ffi.rs  lib.rs  main.rs
src/api/: invoke.ts
src/components/: Crawl.tsx  Monitor.tsx
src/components/Controls/: Controls.tsx
src/components/Crawl/: Crawl.tsx  LinkResult.tsx  SelectOptions.tsx
src/components/Domains/: Domain.tsx
src/components/Header/: Header.tsx
src/components/Monitor/: Monitor.tsx
src/components/Nav/: Nav.tsx
src/context/: UserContext.tsx
