[package]
name = "spider"
version = "0.0.0"
description = "crawl"
authors = ["Joshua Newell Diehl"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["http-all", "shell-open"] }
reqwest = {version = "0.11.16", features = ["cookies"] }
scraper = "0.15.0"
select = "0.6.0"
cron = "0.12.0"
chrono = "0.4.23"
thiserror = "1.0.38"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
